add-item-requests-and-gateway
  - Add tests